# Chat-Assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_upload.py
app/api/: router.py
app/api/endpoints/: chat.py  upload.py
app/core/: config.py
app/services/: memory_manager.py  rag_pipeline.py  vectorstore.py
server/: .env  logger.py  main.py  requirements.txt  test.py
server/middleware/: exp_handler.py
server/model/: LLM.py  load_vectorstore.py  pdf_hadler.py
server/routes/: ask.py  uploadpdf.py
user/ui/: app.py
