[project]
name = "medical-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-pinecone>=0.2.13",
    "pinecone>=7.3.0",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.41.0",
]
